# nvim2

./: .gitignore  Cargo.toml  flake.nix  idea.md  main.rs  readme.md  shell.nix  todo.txt
src/: main.rs
src/files/: files.rs
src/lsp/: decode.rs  lsp.rs  mod.rs
src/text/: mod.rs  text.rs  text_input.rs  text_render.rs
test/: new.txt  test.txt
